# HTmiR_project

./: .gitignore  CONVENTIONS_NLP.md  README-FR.md  README.md  pyproject.toml  requirements.txt
configs/: collection.yaml  corpus.yaml  corpus_vinci.yaml  preprocessing_vinci.yaml  training.yaml  training_smoke.yaml  trocr_lora_r8.yaml
data/catmus-french-13c/: dataset_manifest.json  eval_report.json  training_metrics.csv
data/catmus-french-13c/test_samples/: line_020207.gt.txt  line_020208.gt.txt  line_020209.gt.txt  line_020210.gt.txt  line_020211.gt.txt  line_020212.gt.txt  line_020213.gt.txt  line_020214.gt.txt
dataset_nlp/: vinci_output.json
docs/: CONVENTIONS_TRANSCRIPTION.md  DATA_SOURCES.md  MODEL_CARD.md  README.md  article_scientifique.md
experiments/: journal.jsonl
infrastructure/: container_entrypoint.py  sagemaker_collect.py  sagemaker_train.py  train_entrypoint.py
paper/: README.md  article.tex  make_figures.py  presentation_10slides.md
scripts/: pack_dashboard_artifacts.py
src/htmir/: __init__.py
src/htmir/aggregation/: confidence.py  data_contract.py  export_json.py  needleman_wunsch.py
src/htmir/cli/: __init__.py  collect.py  preprocess.py  run_local.py  segment.py
src/htmir/collection/: __init__.py  gallica.py  huggingface_loader.py  image_validator.py  manifest_builder.py  s3_storage.py  zenodo.py
src/htmir/corpus/: __init__.py  manifest.py  prepare.py  split.py
src/htmir/data/: prepare_catmus.py  s3_sync.py
src/htmir/eval/: evaluate.py  seg_eval.py
src/htmir/evaluation/: bootstrap.py  evaluate.py  mcnemar.py  metrics.py
src/htmir/htr/: baseline.py  finetune_trocr.py
src/htmir/nlp/: __init__.py  correction.py  data_contract.py  db.py  lexicon.py  normalize.py  pipeline.py
src/htmir/pipeline/: __init__.py  run.py
src/htmir/preprocessing/: binarize.py  clahe.py  deskew.py  mirror.py  pipeline.py
src/htmir/segmentation/: export_xml.py  layout.py  lines.py
src/htmir/training/: train_kraken.py
src/htmir/utils/: io.py  logger.py  seeds.py
src/htmir/viz/: dashboard.py  data_loaders.py
tests/: conftest.py  test_collection_manifest.py  test_confidence.py  test_corpus_split.py  test_dashboard.py  test_data_contract.py  test_data_loaders.py  test_evaluate.py  test_gallica.py  test_image_validator.py  test_metrics.py  test_mirror.py  test_nlp_correction.py  test_nlp_data_contract.py  test_nlp_normalize.py  test_prepare_catmus.py  test_preprocessing.py  test_regression.py  test_run_local.py  test_s3_sync.py  test_sagemaker_train.py  test_seg_eval.py  test_segmentation.py  test_train_kraken.py
