[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "htr-medieval-manuscripts-2026"
version = "0.1.0"
description = "Pipeline HTR pour manuscrits médiévaux — Master Data/IA HETIC MD5"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Groupe HTR HETIC 2026" }]

dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.41.0,<5",
    "peft>=0.11.1",
    "datasets>=2.19.1",
    "tokenizers>=0.19.1",
    "accelerate>=0.30.1",
    "opencv-python>=4.9.0.80",
    "scikit-image>=0.23.2",
    "Pillow>=10.3.0",
    "numpy>=1.26.4",
    "scipy>=1.13.0",
    "editdistance>=0.8.1",
    "jsonschema>=4.22.0",
    "kraken>=5.2.5",
    "segmentation-models-pytorch>=0.3.3",
    "huggingface-hub>=0.23.2",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.4",
]

[project.scripts]
htmir-preprocess = "htmir.cli.preprocess:main"
htmir-segment = "htmir.cli.segment:main"
htmir-prepare-corpus = "htmir.corpus.prepare:main"
htmir-pipeline = "htmir.pipeline.run:main"
htmir-evaluate = "htmir.evaluation.evaluate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
