[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "htmir"
version = "0.1.0"
description = "Fine-tuning HTR Kraken pour le français médiéval (CATMuS, XIIIe siècle)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Abdessamad" }]

# Dépendances de préparation des données (légères, tournent en local et sur SageMaker)
dependencies = [
    "duckdb>=1.0.0",
    "pillow>=10.3.0",
    "pyyaml>=6.0",
    "boto3>=1.34.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
# Entraînement / évaluation — installé dans le conteneur SageMaker GPU
train = [
    "kraken>=5.2",
    "torch>=2.1",
]
# Développement / tests
dev = [
    "pytest>=8.0",
    "pyarrow>=15.0",
]
# Dashboard de visualisation
viz = [
    "streamlit>=1.35",
    "pandas>=2.0",
    "altair>=5.0",
]

[project.scripts]
htmir-prepare = "htmir.data.prepare_catmus:main"
htmir-evaluate = "htmir.eval.evaluate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
htmir = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

